Configured data access services, clean up solution.

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "server=(localdb)\\mssqllocaldb;database=UserManagement;Trusted_Connection=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
