Crud operations to car related models. Ability to create and view cars.

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "server=(localdb)\\mssqllocaldb;database=UserManagement;Trusted_Connection=true"
+    "SqlServer": "server=(localdb)\\mssqllocaldb;database=CarManagement;Trusted_Connection=true"
   },
   "Logging": {
     "LogLevel": {
