--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup>
