Add jwt authentication.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "SqlServer": "server=(localdb)\\mssqllocaldb;database=CarManagement;Trusted_Connection=true"
   },
+  "JwtValidationOptions": {
+    "Issuer": "CarManageIssuer",
+    "Audience": "CarManageClient",
+    "SecretKey": "CarManageJwtSecretKey!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
